--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,6 +21,7 @@
     <color name="hamburgerColor">@color/textWhite</color>
     <color name="darkBackground">#FF424242</color>
     <color name="lightBackground">#FFFFFFFF</color>
+    <color name="success">#2e7d32</color>
     <color name="error">#B02020</color>
     <color name="favorite">#f44336</color>
     <color name="sponsor">#fbc02d</color>
