--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -46,4 +46,5 @@
     <item name="navTitle" type="id" />
     <item name="navSubTitle" type="id" />
     <item name="loadingWidget" type="id" />
+    <item name="appStatusWidget" type="id" />
 </resources>
